# vibe-playground

./: README.md
vibe-streamer/: Makefile  main.py  pyproject.toml
vibe-streamer/src/vibe_streamer/: __init__.py  config.py  db.py  delegates.py  jellyfin.py  main.py  player.py  scanner.py  ui.py
vibe-streamer/tests/: conftest.py  test_config.py  test_db.py  test_jellyfin.py  test_main.py  test_player.py  test_scanner.py  test_ui.py
