[project]
name = "vibe-streamer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pyside6>=6.11.0",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.20.0",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]
[project.scripts]
vibe-streamer = "vibe_streamer.main:main"
[tool.pytest.ini_options]
pythonpath = ["src"]
